photo.html + manifest.json

--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home | http://quentin.monmert.pagesperso-orange.fr/</title>
+    <title>Photo | http://quentin.monmert.pagesperso-orange.fr/</title>
 
     <link rel="apple-touch-icon" sizes="57x57"   href="img/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60"   href="img/icons/apple-icon-60x60.png">
@@ -26,52 +26,62 @@
 
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">    
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/style-photo.css">    
 </head>
 <body>
+    
+    <div class="pimg1 animated bounceInDown">
+        <div class="ptext">
+            <span class="border trans">
+                Etape du Tour 2017
+            </span>
+        </div>
+    </div>
 
-    <header id="intro" class="animated bounceInDown">
-        <nav>
-            <span></span>
-            <span>Quentin Monmert</span>
-            <span class="right"><i class="fa fa-battery"></i></span>
-        </nav>
-    </header>
-
-    <section id="section-a">
-        <p>Ingénieur d'Etudes et de Développement chez Ippon Technologies</p>
+    <section class="section section-light">
+        <h2>Côte des Demoiselles Coiffées</h2>
+        <p>
+            3.9km à 5.2%
+        </p>
     </section>
 
-    <section id="section-b">
-        <ul>
-            <li>
-                <i class="fa fa-linkedin-square"></i>
-                <a href="https://www.linkedin.com/in/quentin-monmert-65038438/">Linkedin</a>
-            </li>
-            <li>
-                <i class="fa fa-twitter-square"></i>
-                <a href="https://twitter.com/quentinmonmert">Twitter</a>
-            </li>
-            <li>
-                <i class="fa fa-facebook-square"></i>
-                <a href="https://www.facebook.com/quentin.monmert">Facebook</a>
-            </li>
-            <li>
-                <i class="fa fa-instagram"></i>
-                <a href="https://www.instagram.com/quentinmonmert/">Instagram</a>
-            </li>
-            <li>
-                <i class="fa fa-picture-o"></i>
-                <a href="/photo.html">More photos</a>
-            </li>
-        </ul>
+    <div class="pimg2">
+        <div class="ptext">
+            <span class="border">
+                181 kms
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-dark">
+        <h2>Col de Vars</h2>
+        <p>
+            9.3km à 7.5%
+        </p>
     </section>
 
-    <section id="section-c">
-        <div class="photo edt-1"></div>
-        <div class="photo edt-2"></div>
-        <div class="photo edt-3"></div>
+    <div class="pimg3">
+        <div class="ptext">
+            <span class="border">
+                3600m de dénivelé
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-light">
+        <h2>Col d'Izoard</h2>
+        <p>
+            14km à 7.3%
+        </p>
     </section>
+
+    <div class="pimg4">
+        <div class="ptext">
+            <span class="border trans">
+                7h30min d'effort
+            </span>
+        </div>
+    </div>
 
 </body>
 </html>
