--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 <a href="https://www.instagram.com/quentinmonmert/">Instagram</a>
             </li>
             <li>
+                <i class="fa fa-code"></i>
+                <a href="/code.html">My job</a>
+            </li>
+            <li>
                 <i class="fa fa-picture-o"></i>
                 <a href="/photo.html">More photos</a>
             </li>
